2004-06-07  Jorn Baayen  <jbaayen@gnome.org>

	* mixer.c: (get_channel):

	Restore saved mixer channel on startup. Fixes #139374.

2004-04-25  Kevin Vandersloot <kfv101 psu edu>

	* mixer.c: Fix volume reduction for alsa. Fixes bug #137307. Patch
	from Jan Schmidt.

2004-04-25  Kevin Vandersloot <kfv101 psu edu>

	* *.server.in: use correct icon to theme properly. Patch from Calum Benson.
	Fixes bug #137707

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* docs/ja/*: Add ja docs since I haven't heard from the original
	author.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Add localized online documentation from Sun's
	translation team for de, es, fr, it, ko, sv, zh_CN, zh_HK
	and zh_TW.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*.sgml: Remove the sgml stuff since we don't need it 
	anymore.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* mixer.c (applet_change_background_cb):
	pixmap argument is a GdkPixmap not a gchar *pixmap.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* mixer.c (mixer_about_cb): Set the about dialog
	on the right screen if the user requests the dialog and
	it's already there but not on the right screen.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>
	
	* mixer.c (mixer_start_gmix_cb):
	Move from egg_screen_execute_command_line_async to
	gdk_spawn_on_screen.

	Fixes bug #135158.

2004-02-17 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/mixer_applet2.xml: Updated for GNOME 2.6.
	* docs/C/mixer_applet2-C.omf: Updated for GNOME 2.6.
	* docs/C/l10n.txt: Updated for GNOME 2.6.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
	(#132071, Padraig O'Briain)

2004-02-02  Richard Hult  <richard@imendio.com>

	* mixer.c: Update my email, and use the correct shadow type for
	the device list. Fixes bug #133136.

2004-01-28  Arvind Samptur  <arvind.samptur@wipro.com>

	* mixer.c: (mixer_about_cb): Set the screen for the